--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 		<li><a href="#">document zip</a></li>
 	</ul>
 
-
+<embed src="http://www.xiami.com/widget/4370308_1769082128,_235_246_FF8719_494949_1/multiPlayer.swf" type="application/x-shockwave-flash" width="235" height="246" wmode="opaque"></embed>
 </body>
 </html>
