--- a/index.html
+++ b/index.html
@@ -2,37 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>NutPage</title>
 </head>
 <body>
-	<h1>Contents:</h1>
+	<h1>Welcome</h1>
 	<ul>
-		<li><h2>
-				<a href="#functions">Functions Involve</a>
-			</h2></li>
-		<li><h2>
-				<a href="#downloadList">Binary File</a>
-			</h2></li>
+		<li><a href="loan.html">房贷计算器</a></li>
+		<li><a href="music.html">music</a></li>
 	</ul>
-
-	<h2>
-		<a id="functions">Functions</a>
-	</h2>
-	<ul>
-		<li>View Example</li>
-		<li>IO Example</li>
-		<li>Intents</li>
-	</ul>
-
-	<h2>
-		<a id="downloadList">Downloads:</a>
-	</h2>
-
-	<ul>
-		<li><a href="heaven.mp3">heaven.mp3</a></li>
-		<li><a href="#">document zip</a></li>
-	</ul>
-
-<embed src="http://www.xiami.com/widget/4370308_1769082128,_235_246_FF8719_494949_1/multiPlayer.swf" type="application/x-shockwave-flash" width="235" height="246" wmode="opaque"></embed>
 </body>
 </html>
